@@ -31,6 +31,7 @@ def Func():
     pass
 
 import os.path
+import re
 import sys
 import types
 import StringIO
@@ -84,14 +85,9 @@ class Environment:
     def subst(self, s):
         if not SCons.Util.is_String(s):
             return s
-        try:
-            if s[0] == '$':
-                return self.d.get(s[1:], '')
-            if s[1] == '$':
-                return s[0] + self.d.get(s[2:], '')
-        except IndexError:
-            pass
-        return self.d.get(s, s)
+        def substitute(m, d=self.d):
+            return d.get(m.group(1), '')
+        return re.sub(r'\$(\w+)', substitute, s)
     def subst_target_source(self, string, raw=0, target=None,
                             source=None, dict=None, conv=None):
         return SCons.Subst.scons_subst(string, self, raw, target,
@@ -107,7 +103,7 @@ class Environment:
         list = []
         for a in args:
             if SCons.Util.is_String(a):
-                a = factory(a)
+                a = factory(self.subst(a))
             list.append(a)
         return list
     def get_factory(self, factory):
@@ -627,6 +623,21 @@ class BuilderTestCase(unittest.TestCase):
         b9.add_action('_altsrc.b', 'altaction')
         tgt = b9(env, target=None, source='foo_altsrc.b')
         assert str(tgt[0]) == 'foo.c', str(tgt[0])
+
+    def test_src_suffix_expansion(self):
+        """Test handling source suffixes when an expansion is involved"""
+        env = Environment(OBJSUFFIX = '.obj')
+
+        b1 = SCons.Builder.Builder(action = '',
+                                   src_suffix='.c',
+                                   suffix='.obj')
+        b2 = SCons.Builder.Builder(action = '',
+                                   src_builder=b1,
+                                   src_suffix='.obj',
+                                   suffix='.exe')
+        tgt = b2(env, target=None, source=['foo$OBJSUFFIX'])
+        s = map(str, tgt[0].sources)
+        assert s == ['foo.obj'], s
 
     def test_suffix(self):
         """Test Builder creation with a specified target suffix
